Fixed text alignment

--- a/style.css
+++ b/style.css
@@ -1,65 +1,57 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Outfit', sans-serif;
-    background-color: hsl(212, 45%, 89%);
-    color: hsl(220, 15%, 55%);
-    
-    
+  margin: 0;
+  padding: 0;
+  font-family: "Outfit", sans-serif;
+  background-color: hsl(212, 45%, 89%);
+  color: hsl(220, 15%, 55%);
 }
 
 .main-container {
-      
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-width: 350px;
-    min-height: 96vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-width: 350px;
+  min-height: 96vh;
 }
 
 .qr-card {
-    display: flex;
-    flex-direction:column;
-    background-color: hsl(0, 0%, 100%);
-    padding: 1.25em;
-    width:350px;
-    align-items: center;
-    border-radius: 1rem;
-    justify-content: center;
-    
-
+  display: flex;
+  flex-direction: column;
+  background-color: hsl(0, 0%, 100%);
+  padding: 1.25em;
+  width: 350px;
+  border-radius: 1rem;
+  justify-content: center;
 }
 
 h2 {
-    color: hsl(218, 44%, 22%);
-    font-weight: 700;
-    text-align: center;
-    
+  color: hsl(218, 44%, 22%);
+  font-weight: 700;
 }
 
 p {
-    line-height: 1.2;
-    text-align: center;
-    font-weight: 400;
-    letter-spacing: 0.5px;
-    margin: 0 1em 1em 1em;
+  line-height: 1.2;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  margin: 0 1em 1em 1em;
 }
 
 img {
-    width: 100%;
-    border-radius: 0.5rem;
-}    
+  width: 100%;
+  border-radius: 0.5rem;
+}
 
 .attribution {
-    font-size: 0.8rem;
-    text-align: center;
-  }
-  
-  .attribution a {
-    color: #3e52a3;
-  }
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+.attribution a {
+  color: #3e52a3;
+}
